# learning-python

./: .gitignore  LICENSE
week-01/currency-exchange/: exchange.py  exchange_test.py  pyproject.toml
week-01/guidos-gorgeous-lasagna/: lasagna.py  lasagna_test.py  pyproject.toml
week-01/hello-py/: pyproject.toml
week-01/hello-py/src/tests/: test_main.py
week-01/hello-world/: hello_world_test.py  pyproject.toml
