[project]
name = "hello-world"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.154.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ANN", "TID", "C4", "PT"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
